
Changelog
=========

4.1.1 (unreleased)
------------------

- XlsSource: Add some more alternate spellings for archival_value mapping.
  [lgraf]

- OrgUnitSelector: Fix fallback logic:

  Build intersection of current admin units' org units and
  user's org units. If some of the user's org units are in the
  current admin unit, use the first of those as the fallback.

  Otherwise we're in an inter-admin unit operation, default to
  current admin unit's first org unit.
  [lgraf]

- CookieStorage: Extend max age of cookies to 30 days (was
  "end of browser session" before).
  [lgraf]

- OrgUnitSelector: Store selected OrgUnit after determining fallback.
  [lgraf]


4.1.0 (2014-12-18)
------------------

- Made the AddPublicTrialColumn more robust.
  [phgross]

- Dropped no longer used document state journalization.
  [phgross]

- Disable docproperty updating in YearfolderStorer process.
  [phgross]

- Improved repository deletion (it's now possible without folder_contents view):
    - Revoke list folder contents permission on repository.
    - Add repository delete action and confirmation view.
    - Adjust global role mapping for delete objects permission.
    - Adjust delete objects permission for repositories.
    - Revoke delete objects permission for dossiers.
    - Added monkeypatch for _verifyObjectPaste to allow moving content without
      delete objects permission.

  [phgross]

- Implements content removal functionality for documentish objects:
    - Add new permission `Remove GEVER content`.
    - Added new document workflow state `document-state-removed`.
    - Added new mail workflow state `mail-state-removed`.
    - Add new action `Remove` to trash tab and add remove confirmation view.
    - Added journalization for document removing and restoring.

  [phgross]

- Rewrite gever setup.
    - Introduce two zcml directives to configure deployments and ldap profiles.
    - Simplify deloyment form, remove multi-client configuration options.