@@ -5,6 +5,10 @@ Changelog
 4.1.1 (unreleased)
 ------------------
 
+- XlsSource: Raise KeyError if a value can't be found in the translation mapping
+  for fields with a vocabulary, instead of just setting the translated value anyway.
+  [lgraf] 
+
 - XlsSource: Add some more alternate spellings for archival_value mapping.
   [lgraf]
 
